--- a/ExamAppMAUI/AppShell.xaml
+++ b/ExamAppMAUI/AppShell.xaml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <Shell
-    x:Class="EksaminationAppMAUI.AppShell"
+    x:Class="ExamAppMAUI.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:EksaminationAppMAUI"
+    xmlns:local="clr-namespace:ExamAppMAUI"
     Shell.FlyoutBehavior="Flyout"
-    Title="EksaminationAppMAUI">
+    Title="ExamAppMAUI">
 
     <ShellContent
         Title="Home"
