--- a/ExamAppMAUI/Views/CreateExamPage/CreateExamPage.xaml
+++ b/ExamAppMAUI/Views/CreateExamPage/CreateExamPage.xaml
@@ -57,7 +57,7 @@
                      Margin="0,10,0,0" />
 
               <Button Text="Opret Eksamen"
-                     Command="{Binding CreateExamCommand}"
+                     Clicked="OnCreateExamClicked"
                      HorizontalOptions="Center"
                      Margin="0,20,0,0" />
 
