--- a/ExamAppMAUI/Views/HistoryPage/HistoryPage.xaml
+++ b/ExamAppMAUI/Views/HistoryPage/HistoryPage.xaml
@@ -1,12 +1,42 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:models="clr-namespace:ExamAppMAUI.Models"
+             xmlns:viewmodels="clr-namespace:ExamAppMAUI.ViewModels"
              x:Class="ExamAppMAUI.Views.HistoryPage"
-             Title="Historik">
-    <VerticalStackLayout>
-        <Label 
-            Text="Historik Side (Under Udvikling)"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+             x:DataType="viewmodels:HistoryViewModel"
+             Title="Eksamenshistorik">
+
+    <CollectionView ItemsSource="{Binding CompletedExams}"
+                    EmptyView="Der er ingen afsluttede eksamener at vise.">
+        <CollectionView.ItemTemplate>
+            <DataTemplate x:DataType="models:Exam">
+                <Frame Padding="15" Margin="20,10" CornerRadius="10" BorderColor="LightGray">
+                    <Grid ColumnDefinitions="*, Auto">
+                        <VerticalStackLayout Grid.Column="0">
+                            <Label Text="{Binding Course}" FontSize="Large" FontAttributes="Bold"/>
+                            <Label Text="{Binding Date, StringFormat='{0:d. MMMM yyyy}'}" FontSize="Small" />
+
+                            <Label Text="{Binding AverageGrade, StringFormat='Gennemsnit: {0:F2}'}"
+                            FontAttributes="Italic"
+                            TextColor="Gray"
+                            Margin="0,5,0,0"/>
+                        </VerticalStackLayout>
+
+                        <HorizontalStackLayout Grid.Column="1" Spacing="10" VerticalOptions="Center">
+                            <Button Text="Se detaljer"
+                                    Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodels:HistoryViewModel}}, Path=GoToDetailsCommand}"
+                                    CommandParameter="{Binding .}"/>
+                            
+                            <Button Text="Slet"
+                                    BackgroundColor="Red"
+                                    TextColor="White"
+                                    Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodels:HistoryViewModel}}, Path=DeleteExamCommand}"
+                                    CommandParameter="{Binding .}"/>
+                        </HorizontalStackLayout>
+                    </Grid>
+                </Frame>
+            </DataTemplate>
+        </CollectionView.ItemTemplate>
+    </CollectionView>
 </ContentPage>
