--- a/ExamAppMAUI/Resources/Styles/Colors.xaml
+++ b/ExamAppMAUI/Resources/Styles/Colors.xaml
@@ -6,12 +6,19 @@
 
     <!-- Note: For Android please see also Platforms\Android\Resources\values\colors.xml -->
 
-    <Color x:Key="Primary">#512BD4</Color>
+    <Color x:Key="Primary">#007AFF</Color>
     <Color x:Key="PrimaryDark">#ac99ea</Color>
     <Color x:Key="PrimaryDarkText">#242424</Color>
-    <Color x:Key="Secondary">#DFD8F7</Color>
+    <Color x:Key="Secondary">#5E5CE6</Color>
     <Color x:Key="SecondaryDarkText">#9880e5</Color>
     <Color x:Key="Tertiary">#2B0B98</Color>
+    <Color x:Key="Success">#34C759</Color>
+    <Color x:Key="Danger">#FF3B30</Color>
+    <Color x:Key="PageBackgroundColor">#F2F2F7</Color>
+    <Color x:Key="CardBackgroundColor">#FFFFFF</Color>
+    <Color x:Key="PrimaryTextColor">#000000</Color>
+    <Color x:Key="SecondaryTextColor">#8A8A8E</Color>
+    <Color x:Key="LightBorderColor">#E5E5EA</Color>
 
     <Color x:Key="White">White</Color>
     <Color x:Key="Black">Black</Color>
